remove references to tasks for now
